@@ -25,7 +25,11 @@
 
 #include "RocksDBEngine/RocksDBTransactionMethods.h"
 
+#include <cstdint>
+#include <memory>
+
 namespace arangodb {
+struct RocksDBMethodsMemoryTracker;
 
 struct IRocksDBTransactionCallback {
   virtual ~IRocksDBTransactionCallback() = default;
@@ -121,6 +125,37 @@ class RocksDBTrxBaseMethods : public RocksDBTransactionMethods {
   Result doCommit();
   Result doCommitImpl();
 
+  /// @brief assumed additional indexing overhead for each entry in a
+  /// WriteBatchWithIndex. this is in addition to the actual WriteBuffer entry.
+  /// the WriteBatchWithIndex keeps all entries (which are pointers) in a
+  /// skiplist. it is unclear from the outside how much memory the skiplist
+  /// will use per entry, so this value here is just a guess.
+  static constexpr size_t fixedIndexingEntryOverhead = 32;
+
+  /// @brief assumed additional overhead for each lock that is held by the
+  /// transaction. the overhead is computed as follows:
+  /// locks are stored in rocksdb in a hash table, which maps from the locked
+  /// key to a LockInfo struct. The LockInfo struct is 120 bytes big.
+  /// we also assume some more overhead for the hash table entries and some
+  /// general overhead because the hash table is never assumed to be completely
+  /// full (load factor < 1). thus we assume 64 bytes of overhead for each
+  /// entry. this is an arbitrary value.
+  static constexpr size_t fixedLockEntryOverhead = 120 + 64;
+
+  /// @brief function to calculate overhead of a WriteBatchWithIndex entry,
+  /// depending on keySize. will return 0 if indexing is disabled in the current
+  /// transaction.
+  size_t indexingOverhead(size_t keySize) const noexcept;
+
+  /// @brief function to calculate overhead of a lock entry, depending on
+  /// keySize. will return 0 if no locks are used by the current transaction
+  /// (e.g. if the transaction is using an exclusive lock)
+  size_t lockOverhead(size_t keySize) const noexcept;
+
+  /// @brief returns the payload size of the transaction's WriteBatch. this
+  /// excludes locks and any potential indexes (i.e. WriteBatchWithIndex).
+  size_t currentWriteBatchSize() const noexcept;
+
   IRocksDBTransactionCallback& _callback;
 
   rocksdb::TransactionDB* _db{nullptr};
@@ -132,24 +167,25 @@ class RocksDBTrxBaseMethods : public RocksDBTransactionMethods {
   rocksdb::Transaction* _rocksTransaction{nullptr};
 
   /// store the number of log entries in WAL
-  uint64_t _numLogdata{0};
+  std::uint64_t _numLogdata{0};
 
   /// @brief number of commits, including intermediate commits
-  uint64_t _numCommits{0};
+  std::uint64_t _numCommits{0};
   /// @brief number of intermediate commits
-  uint64_t _numIntermediateCommits{0};
-  // if a transaction gets bigger than these values then an automatic
-  // intermediate commit will be done
-  uint64_t _numInserts{0};
-  uint64_t _numUpdates{0};
-  uint64_t _numRemoves{0};
+  std::uint64_t _numIntermediateCommits{0};
+  std::uint64_t _numInserts{0};
+  std::uint64_t _numUpdates{0};
+  std::uint64_t _numRemoves{0};
 
   /// @brief number of rollbacks performed in current transaction. not
   /// resetted on intermediate commit
-  uint64_t _numRollbacks{0};
+  std::uint64_t _numRollbacks{0};
 
   /// @brief tick of last added & written operation
   TRI_voc_tick_t _lastWrittenOperationTick{0};
+
+  /// @brief object used for tracking memory usage
+  std::unique_ptr<RocksDBMethodsMemoryTracker> _memoryTracker;
 
   bool _indexingDisabled{false};
 };
