@@ -63,7 +63,6 @@ class RocksDBKey {
   RocksDBKey& operator=(RocksDBKey const& other) = delete;
   RocksDBKey& operator=(RocksDBKey&& other) = delete;
 
- public:
   /// @brief verify that a key actually contains the given local document id
   bool containsLocalDocumentId(LocalDocumentId const& id) const;
 
@@ -191,7 +190,6 @@ class RocksDBKey {
   //////////////////////////////////////////////////////////////////////////////
   void constructLogEntry(uint64_t objectId, replication2::LogIndex idx);
 
- public:
   //////////////////////////////////////////////////////////////////////////////
   /// @brief Extracts the type from a key
   ///
@@ -309,7 +307,6 @@ class RocksDBKey {
   /// size of internal objectID
   static constexpr size_t objectIdSize() { return sizeof(uint64_t); }
 
- public:
   //////////////////////////////////////////////////////////////////////////////
   /// @brief Returns a reference to the full, constructed key
   //////////////////////////////////////////////////////////////////////////////
